hphp/hack/test/typecheck/new_inference/tconst/tconst_on_generics8.php.exp
File "tconst_on_generics8.php", line 60, characters 21-30:
Invalid argument (Typing[4110])
  File "tconst_on_generics8.php", line 50, characters 47-51:
  Expected `Box::T`
  File "tconst_on_generics8.php", line 65, characters 35-37:
  But got `int`
  File "tconst_on_generics8.php", line 65, characters 35-37:
  This type argument to `Contra` only allows supertypes (it is contravariant)
File "tconst_on_generics8.php", line 50, characters 44-45:
Illegal usage of a contravariant type parameter (Typing[4121])
  File "tconst_on_generics8.php", line 42, characters 13-14:
  This is where the parameter was declared as contravariant `-`
  File "tconst_on_generics8.php", line 50, characters 44-45:
  `where _ = _` constraints are invariant on the left and right
